# Axio

./: .copilot_agreements.md  .gitignore  LICENSE  README.md  _config.yml  analyze_failure.py  bootstrap.py  build-book.py  build-site.py  debug_apcm.py  debug_ep5.py  email_list.axio.csv  f0_results.json  generate-index.py  index.html  pandoc_version.py  paper_redirects.json  posts.csv  site-config.json  update-site.sh  v200_results_20260113_172122.json  v200_results_20260113_172242.json  v200_results_20260113_172423.json  v300_ablation_d_results.json  v310_none_20260117_123111.json  v310_persistence_excision_20260117_125949.json  v410_ablations_1seed_20260118_153738.json  v410_pilot_20260118_144227.json  v420_ablation_b_42_20260119_185917.json  v420_ablation_c_42_20260119_201320.json  v420_ablation_d_42_20260119_201650.json  v420_llm_baseline_42_20260119_161247.json  v430_calibration_20260120_114109.json  v430_calibration_20260120_114536.json  v43_implementation_report.md
src/toy_axionic_kernel_integrity/: README.md  aki_project_report.md  pyproject.toml  run0_baseline.py  run1_outcome_toggle.py  run2_cta_phase_aware.py  run3_eligibility_edge_probe.py  run4_renewal_feedback.py  v3_run0_baseline.py
src/toy_axionic_kernel_integrity/docs/: IMPLEMENTATION_REPORT_V02.md  IMPLEMENTATION_REPORT_V031.md  IMPLEMENTATION_REPORT_V032.md  IMPLEMENTATION_REPORT_V042.md  IMPLEMENTATION_REPORT_V043.md  IMPLEMENTATION_REPORT_V052.md  V02_IMPLEMENTATION_REPORT.md  instructions.md  instructions_v0.2.2.md  instructions_v0.4.2.md  instructions_v0.4.3.md  instructions_v0.4.3_runner.md  instructions_v0.4.3_runnerC.md  instructions_v0.4.3_runnerD.md  instructions_v0.5.2.md  instructions_v0.5.2_runnerF.md  instructions_v0.5.2_runnerH.md  instructions_v0.7_runnerC.md  instructions_v0.8_runnerA.md  instructions_v0.8_runnerB.md  instructions_v032_runner.md  instructions_v2.1.md  instructions_v2.md  instructions_v3.1.md  preregister_v032_H10000.md  rsa_instructions_v0.1.md  rsa_instructions_v0.1_runner2.md  rsa_instructions_v0.1_runner3.md  rsa_instructions_v0.2.md  rsa_instructions_v0.2_runner1.md  rsa_instructions_v3.0.md  (+24 more)
src/toy_pseudo_axion_mci/: IMPLEMENTATION_REPORT.md  MCI_MINIMAL_REPORT_v2.md  README.md  instructions.md  mc_minimal_spec.md  mci_minimal_spec_v0.4.md  pyproject.toml  spec.md
(+6453 files in other folders)
